--- a/styles.css
+++ b/styles.css
@@ -110,3 +110,39 @@ img {
 	  height: 15vh;
 	}
   }
+  /* Additional styles for the enlarged photo */
+  .enlarged-photo-container {
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.8);
+	justify-content: center;
+	align-items: center;
+}
+.enlarged-photo {
+	max-width: 90%;
+	max-height: 90%;
+}
+.close-button {
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	color: white;
+	font-size: 24px;
+	cursor: pointer;
+}
+.grid-wrapper {
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+	grid-gap: 10px;
+}
+.wide {
+	position: relative;
+}
+.wide img {
+	width: 100%;
+	height: auto;
+}
