--- a/styles.css
+++ b/styles.css
@@ -110,4 +110,11 @@ img {
 	  height: 15vh;
 	}
   }
-  
+img {
+    transition:transform 0.25s ease;
+}
+
+img:hover {
+    -webkit-transform:scale(1.5); /* or some other value */
+    transform:scale(1.5);
+}
