--- a/styles.css
+++ b/styles.css
@@ -116,6 +116,9 @@ img {
 
 /* De hover-stijl die wordt toegepast wanneer de muis over de afbeelding beweegt */
 img:hover {
-    transform: scale(1.2); /* Schaal de afbeelding 2x en verplaats naar het midden */
-
-	}
+    position: fixed;
+    top: 0px;
+    left: 0px;
+	max-height: 100%;
+    transform: scale(0.5); /* Hier kun je de schaalwaarde aanpassen, 0.8 betekent 80% van de oorspronkelijke grootte */
+}
